# gimmary

./: .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
gimmary/: api.py  main.py
gimmary/app/auth/: settings.py  utils.py
gimmary/app/groups/: router.py  schemes.py
gimmary/app/leaderboard/: router.py  schemas.py
gimmary/app/missions/: generate_model.py  router.py  schemes.py
gimmary/app/team/: router.py  schemas.py
gimmary/app/users/: repositories.py  router.py  schemas.py  services.py
gimmary/database/: connection.py  models.py  settings.py
gimmary/database/alembic/: env.py
gimmary/database/alembic/versions/: 08da262b5a9d_1.py  4156c7366167_1.py  4d626fc4f0e1_1.py  99adbc829832_1.py  9b99d94336f7_1.py  a8111714cdcb_1.py  c066aed08c97_1.py  cb818e2ea378_1.py  d755ea03aa6c_init.py  fa936100175b_1.py
scripts/: seed.sql
