[project]
name = "gimmary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.8",
    "fastapi>=0.129.0",
    "joserfc>=1.6.2",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
