[project]
name = "gimmary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.8",
    "fastapi>=0.129.0",
    "fastapi-middleware>=0.2.1",
    "gradio>=6.6.0",
    "joserfc>=1.6.2",
    "kornia>=0.8.2",
    "mini-dust3r>=0.1.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.52.1",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]
